# TuxHueDo

./: CMakeLists.txt  README.md
config/: EmbeddedWebrootFiles.hpp.in  Version.hpp.in
include/Huenicorn/: Channel.hpp  Config.hpp  Credentials.hpp  CurlHttpClient.hpp  EntertainmentConfiguration.hpp  HttpRequestUtils.hpp  HuenicornCore.hpp  IGrabber.hpp  IHttpClient.hpp  IRestServer.hpp  PipewireGrabber.hpp  RequestUtils.hpp  SetupBackend.hpp  WebUIBackend.hpp
src/: ApiTools.cpp  Config.cpp  Credentials.cpp  CurlHttpClient.cpp  HttpRequestUtils.cpp  HuenicornCore.cpp  PipewireGrabber.cpp  RequestUtils.cpp  SetupBackend.cpp  WebUIBackend.cpp  XdgDesktopPortal.cpp  main.cpp
src/gtk/: AppState.cpp  AppState.hpp  MainWindow.cpp  MainWindow.hpp  ScreenPartitionWidget.cpp  ScreenPartitionWidget.hpp  SettingsDialog.cpp  SettingsDialog.hpp  main.cpp
src/qt/: ChannelListWidget.cpp  ChannelListWidget.hpp  MainWindow.cpp  MainWindow.hpp  ScreenPartitionWidget.cpp  ScreenPartitionWidget.hpp  SettingsDialog.cpp  SettingsDialog.hpp  TrayIcon.cpp  TrayIcon.hpp  main.cpp
webroot/: index.html  mainSetup.js  setup.html
